Fix CORS for frontend localhost